<resources>
    <string name="app_name">Acompanhamento Escolar</string>
    <string name="main_app_title">Acompanhamento Escolar</string>
    <string name="main_app_subtitle">Acesse o desempenho escolar</string>
    <string name="login_title">Login</string>
    <string name="login_hint_email">E-mail ou matrícula</string>
    <string name="login_hint_password">Senha</string>
    <string name="btn_signin">Entrar</string>
    <string name="login_link_signup">Não tem uma conta? Cadastre-se</string>
    <string name="aluno_nome_placeholder">Nome do Aluno</string>
    <string name="btn_remover">Remover</string>
    <string name="label_disciplina">Disciplina</string>
    <string name="label_nota1">Nota 1:</string>
    <string name="label_nota2">Nota 2:</string>
    <string name="label_media">Média:</string>
    <string name="label_matematica">Matemática</string>
    <string name="label_total">Total</string>
    <string name="label_presenca">Presença</string>
    <string name="label_frequencia">Frequência</string>
    <string name="label_serie_ano">Série/Ano</string>
    <string name="label_relatorios">Relatórios</string>
    <string name="label_filtros_relatorios">Filtros do Relatório</string>
    <string name="label_tipo_relatorio">Tipo de Relatório:</string>
    <string name="label_filtrar_por">Filtrar por:</string>
    <string name="label_grafico_de_desempenho">Gráfico de Desempenho</string>
    <string name="label_selecionar_tipo_relatorio">Selecione um tipo de relatório e um filtro para visualizar os dados.</string>
    <string name="label_gerar_pdf">Gerar PDF</string>
    <string name="label_btn_voltar">Voltar</string>
    <string name="label_gerenciar_notas">Gerenciar Notas</string>
    <string name="label_adicionar_editar_notas">Adicionar/Editar Notas</string>
    <string name="label_aluno">Aluno:</string>
    <string name="label_salvar_notas">Salvar Notas</string>
    <string name="label_notas_registradas">Notas Registradas</string>
    <string name="label_gerenciar_frequencia">Gerenciar Frequência</string>
    <string name="label_registrar_frequencia">Registrar Frequência</string>
    <string name="label_total_aulas">Total de Aulas:</string>
    <string name="label_aulas_presentes">Aulas Presentes:</string>
    <string name="label_salvar_frequencia">Salvar Frequência</string>
    <string name="label_frequencia_registrada">Frequência Registrada</string>
    <string name="label_gerenciar_alunos">Gerenciar Alunos</string>
    <string name="label_adicionar_novo_aluno">Adicionar Novo Aluno</string>
    <string name="label_nome_do_aluno">Nome do Aluno:</string>
    <string name="label_adicionar_aluno">Adicionar Aluno</string>
    <string name="label_lista_alunos">Lista de Alunos</string>
    <string name="label_frequencia_escolar">Frequência Escolar</string>
    <string name="label_enviar_comunicados">Enviar Comunicados</string>
    <string name="label_novo_comunicado">Novo Comunicado</string>
    <string name="label_destinatario">Destinatário:</string>
    <string name="label_titulo">Título:</string>
    <string name="label_conteudo">Conteúdo:</string>
    <string name="label_enviar_comunicado">Enviar Comunicado</string>
    <string name="label_comunicados_enviados">Comunicados Enviados</string>
    <string name="label_analise_desempenho">Análise de Desempenho</string>
    <string name="label_selecione_disciplina">Selecione a disciplina:</string>
    <string name="label_media_atual">Média Atual</string>
    <string name="label_media_anterior">Média Anterior</string>
    <string name="label_tendencia">Tendência</string>
    <string name="label_comunicados_escolares">Comunicados Escolares</string>
    <string name="label_boletim">Boletim</string>
    <string name="label_btn_frequencia">Frequência</string>
    <string name="label_desempenho">Desempenho</string>
    <string name="label_comunicados">Comunicados</string>
    <string name="label_btn_sair">Sair</string>
    <string name="label_cadastro_responsavel">Cadastro de Responsável</string>
    <string name="label_nome_completo">Nome Completo</string>
    <string name="label_cpf">CPF</string>
    <string name="label_email">E-mail</string>
    <string name="label_senha">Senha</string>
    <string name="label_confirmar_senha">Confirmar Senha</string>
    <string name="label_btn_cadastrar">Cadastrar</string>
    <string name="label_boletim_escolar">Boletim Escolar</string>
    <string name="label_disciplina2">Disciplina</string>
    <string name="label_media2">Média</string>
    <string name="label_painel_administrativo">Painel Administrativo</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_endereco">Endereço</string>
    <string name="label_nome_aluno">Nome do aluno</string>
    <string name="label_cadastro_usuario">Cadastro de usuário</string>
    <string name="label_nota_1">"Nota 1: "</string>
    <string name="label_nota_2">"Nota 2: "</string>
    <string name="msg_preencha_campos">Preencha todos os campos</string>
    <string name="perfil">Perfil</string>
    <string name="logo_do_aplicativo">Icone de capelo</string>
    <string name="buscar_alunos">Buscar alunos</string>
    <string name="info_pessoais">Informações Pessoais</string>
    <string name="info_academicas">Informações Acadêmicas</string>
    <string name="info_contato">Informações de Contato</string>
    <string name="estudantes_vinculados">Estudantes Vinculados:</string>
    <string name="responsaveis_vinculados">Responsáveis Vinculados:</string>
    <string name="label_ano">Ano</string>
    <string name="header_disciplina">Disciplina</string>
    <string name="header_total">Total</string>
    <string name="header_presencas">Presenças</string>
    <string name="header_percentual">%</string>
    <string name="error_student_id_not_provided">ID do estudante não fornecido.</string>
</resources>